fix advancement